CarModelImage Dto/Service/Handler/Router Implemented
