# src/api/dto/car.go
@@ -66,6 +66,7 @@ type CarModelResponse struct {
 	GearBox        GearboxResponse         `json:"gearbox"`
 	CarModelColors []CarModelColorResponse `json:"carModelColors,omitempty"`
 	CarModelYears  []CarModelYearResponse  `json:"carModelYears,omitempty"`
+	CarModelImages []CarModelImageResponse `json:"carModelImages,omitempty"`
 }
 
 type CreateCarModelColorRequest struct {
@@ -114,4 +115,21 @@ type CarModelPriceHistoryResponse struct {
 	CarModelYearId int       `json:"carModelYearId"`
 	PriceAt        time.Time `json:"priceAt,omitempty"`
 	Price          float64   `json:"price,omitempty"`
+}
+
+type CreateCarModelImageRequest struct {
+	CarModelId  int  `json:"carModelId" binding:"required"`
+	ImageId     int  `json:"imageId" binding:"required"`
+	IsMainImage bool `json:"isMainImage"`
+}
+
+type UpdateCarModelImageRequest struct {
+	IsMainImage bool `json:"isMainImage,omitempty"`
+}
+
+type CarModelImageResponse struct {
+	Id          int          `json:"id"`
+	CarModelId  int          `json:"carModelId,omitempty"`
+	Image       FileResponse `json:"image,omitempty"`
+	IsMainImage bool         `json:"isMainImage"`
 }
