# src/api/routers/cars.go
@@ -93,3 +93,12 @@ func CarModelPriceHistory(r *gin.RouterGroup, cfg *config.Config) {
 	r.GET("/:id", h.GetById)
 	r.POST("/get-by-filter", h.GetByFilter)
 }
+func CarModelImage(r *gin.RouterGroup, cfg *config.Config) {
+	h := handlers.NewCarModelImageHandler(cfg)
+
+	r.POST("/", h.Create)
+	r.PUT("/:id", h.Update)
+	r.DELETE("/:id", h.Delete)
+	r.GET("/:id", h.GetById)
+	r.POST("/get-by-filter", h.GetByFilter)
+}
